--- a/src/app/appointment-dialog/appointment-dialog.component.html
+++ b/src/app/appointment-dialog/appointment-dialog.component.html
@@ -1,55 +1,47 @@
-<div class="dialog-content">
-  <h5 mat-dialog-title *ngIf="!data.uuid">Add Appointment</h5>
-  <h5 mat-dialog-title *ngIf="data.uuid">Edit Appointment</h5>
-  <div [formGroup]="appointmentForm">
-    <div mat-dialog-content>
-      <mat-form-field class="form-field">
-        <mat-label>Title</mat-label>
-        <input formControlName="title" matInput />
-      </mat-form-field>
-      <mat-form-field class="form-field">
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="date" />
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
-      <mat-form-field class="form-field">
-        <mat-label>Start Time</mat-label>
-        <input matInput formControlName="startTime" type="time" />
-      </mat-form-field>
-      <mat-form-field class="form-field">
-        <mat-label>End Time</mat-label>
-        <input matInput formControlName="endTime" type="time" />
-      </mat-form-field>
-      <div
-        *ngIf="
-          appointmentForm.errors && appointmentForm.errors['timeRangeInvalid']
-        "
-        class="error"
-      >
-        End time must be after start time.
-      </div>
-    </div>
-    <div mat-dialog-actions align="end">
-      <button type="submit" mat-flat-button (click)="onSaveClick()">
-        <span *ngIf="data.uuid">Edit Appointment</span>
-        <span *ngIf="!data.uuid">Add Appointment</span>
-      </button>
-      <button
-        (click)="onDeleteClick()"
-        *ngIf="data.uuid"
-        style="margin-left: 10px"
-        mat-stroked-button
-      >
-        Delete
-      </button>
-      <button
-        style="margin-left: 10px"
-        mat-stroked-button
-        (click)="onNoClick()"
-      >
-        Cancel
-      </button>
-    </div>
+<h2 mat-dialog-title>{{ data.uuid ? 'Edit' : 'Add' }} Appointment</h2>
+
+<mat-dialog-content>
+  <mat-form-field appearance="outline" style="width: 100%; margin-bottom: 15px;">
+    <mat-label>Title</mat-label>
+    <input matInput [(ngModel)]="data.title" placeholder="Enter appointment title">
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" style="width: 100%; margin-bottom: 15px;">
+    <mat-label>Date</mat-label>
+    <input matInput type="date" [(ngModel)]="data.date" [value]="data.date | date: 'yyyy-MM-dd'">
+  </mat-form-field>
+
+  <div style="display: flex; gap: 10px; margin-bottom: 15px;">
+    <mat-form-field appearance="outline" style="flex: 1;">
+      <mat-label>Start Time</mat-label>
+      <input matInput type="time" [(ngModel)]="data.startTime">
+    </mat-form-field>
+
+    <mat-form-field appearance="outline" style="flex: 1;">
+      <mat-label>End Time</mat-label>
+      <input matInput type="time" [(ngModel)]="data.endTime">
+    </mat-form-field>
   </div>
-</div>
+
+  <mat-form-field appearance="outline" style="width: 100%; margin-bottom: 15px;">
+    <mat-label>Room</mat-label>
+    <mat-select [(ngModel)]="data.resourceId" placeholder="Select a room">
+      <mat-option [value]="null">No Room</mat-option>
+      <mat-option *ngFor="let resource of data.resources" [value]="resource.id">
+        <span [style.padding]="'3px 8px'" [style.border-radius]="'3px'" [style.background-color]="resource.color"
+          [style.margin-right]="'8px'">
+        </span>
+        {{ resource.name }}
+        <span *ngIf="resource.capacity" style="font-size: 12px; opacity: 0.7;">
+          ({{ resource.capacity }} people)
+        </span>
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+  <button mat-button (click)="onCancel()">Cancel</button>
+  <button mat-button color="warn" *ngIf="data.uuid" (click)="onDelete()">Delete</button>
+  <button mat-raised-button color="primary" (click)="onSave()">Save</button>
+</mat-dialog-actions>
