--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,10 +2,7 @@
   <div class="calendar-container">
     <div class="calendar-header">
       <div>
-        <h2
-          class="calendar-month"
-          *ngIf="currentView === 'month' || currentView === 'week'"
-        >
+        <h2 class="calendar-month" *ngIf="currentView === 'month' || currentView === 'week'">
           {{ viewDate | date : "MMMM" }}
           <span>{{ viewDate | date : "y" }}</span>
         </h2>
@@ -17,66 +14,44 @@
           {{ viewDate | date : "EEEE" }}
         </span>
       </div>
-      <mat-button-toggle-group
-        class="calendar-view-toggle"
-        name="currentView"
-        (change)="switchToView($event.value)"
-        aria-label="Calendar-View"
-      >
-        <mat-button-toggle checked="{{ true }}" value="{{ CalendarView.Month }}"
-          >Month</mat-button-toggle
-        >
-        <mat-button-toggle value="{{ CalendarView.Week }}"
-          >Week</mat-button-toggle
-        >
-        <mat-button-toggle value="{{ CalendarView.Day }}"
-          >Day</mat-button-toggle
-        >
+      <mat-button-toggle-group class="calendar-view-toggle" name="currentView" (change)="switchToView($event.value)"
+        aria-label="Calendar-View">
+        <mat-button-toggle checked="{{ true }}" value="{{ CalendarView.Month }}">Monat</mat-button-toggle>
+        <mat-button-toggle value="{{ CalendarView.Week }}">Woche</mat-button-toggle>
+        <mat-button-toggle value="{{ CalendarView.Day }}">Tag</mat-button-toggle>
       </mat-button-toggle-group>
       <div class="calendar-controls">
-        <button
-          mat-icon-button
-          (click)="previous()"
-          (keydown.enter)="previous()"
-          (keydown.space)="previous()"
-        >
+        <button mat-icon-button (click)="previous()" (keydown.enter)="previous()" (keydown.space)="previous()">
           <mat-icon>chevron_left</mat-icon>
         </button>
-        <button
-          mat-stroked-button
-          (click)="viewToday()"
-          (keydown.enter)="viewToday()"
-          (keydown.space)="viewToday()"
-        >
-          Today
+        <button mat-stroked-button (click)="viewToday()" (keydown.enter)="viewToday()" (keydown.space)="viewToday()">
+          Heute
         </button>
-        <button
-          mat-icon-button
-          (click)="next()"
-          (keydown.enter)="next()"
-          (keydown.space)="next()"
-        >
+        <button mat-icon-button (click)="next()" (keydown.enter)="next()" (keydown.space)="next()">
           <mat-icon>chevron_right</mat-icon>
         </button>
-        <button
-          mat-flat-button
-          (click)="selectDate()"
-          (keydown.enter)="selectDate()"
-          (keydown.space)="selectDate()"
-        >
-          Add Appointment
+        <button mat-flat-button (click)="selectDate()" (keydown.enter)="selectDate()" (keydown.space)="selectDate()">
+          Termin hinzufügen
         </button>
       </div>
     </div>
 
+    <!-- Resource Filter Checkboxes (in allen Ansichten sichtbar) -->
+    <div class="resource-filter">
+      <span class="filter-label">Räume anzeigen:</span>
+      <div class="checkbox-group">
+        <label *ngFor="let resource of resources" class="resource-checkbox">
+          <input type="checkbox" [checked]="isResourceVisible(resource.id)"
+            (change)="toggleResourceVisibility(resource.id)" />
+          <span [style.background-color]="resource.color" class="checkbox-label">
+            {{ resource.name }}
+          </span>
+        </label>
+      </div>
+    </div>
+
     <!-- Month @start -->
-    <table
-      width="100%"
-      cellspacing="0"
-      cellpadding="0"
-      class="calendar-view-month"
-      *ngIf="currentView === 'month'"
-    >
+    <table width="100%" cellspacing="0" cellpadding="0" class="calendar-view-month" *ngIf="currentView === 'month'">
       <thead>
         <tr>
           <th *ngFor="let day of weekDays">
@@ -86,39 +61,24 @@
       </thead>
       <tbody cdkDropListGroup>
         <tr *ngFor="let week of weeks">
-          <td
-            *ngFor="let date of week"
-            cdkDropList
-            (cdkDropListDropped)="drop($event, date)"
-            [cdkDropListData]="appointments"
-            [class.today]="isToday(date)"
-            [ngStyle]="{ opacity: isCurrentMonth(date) ? '1' : '0.5' }"
-          >
-            <div
-              (click)="selectDate(date)"
-              (keydown.enter)="selectDate(date)"
-              (keydown.space)="selectDate(date)"
-              class="cell-overlay"
-              tabindex="0"
-            ></div>
+          <td *ngFor="let date of week" cdkDropList (cdkDropListDropped)="drop($event, date)"
+            [cdkDropListData]="appointments" [class.today]="isToday(date)"
+            [ngStyle]="{ opacity: isCurrentMonth(date) ? '1' : '0.5' }">
+            <div (click)="selectDate(date)" (keydown.enter)="selectDate(date)" (keydown.space)="selectDate(date)"
+              class="cell-overlay" tabindex="0"></div>
             <div class="date">
               {{ date.getDate() }}
             </div>
             <div class="appointments">
               <ng-container *ngFor="let appointment of appointments">
-                <div
-                  tabindex="0"
-                  *ngIf="isSameDate(appointment.date, date)"
-                  class="appointment"
-                  cdkDrag
-                  cdkDragHandle
-                  [cdkDragData]="appointment"
-                  [ngStyle]="{ 'background-color': appointment.color }"
-                  (click)="editAppointment(appointment, $event)"
+                <div tabindex="0"
+                  *ngIf="isSameDate(appointment.date, date) && isResourceVisible(appointment.resourceId || '')"
+                  class="appointment" cdkDrag cdkDragHandle [cdkDragData]="appointment"
+                  [ngStyle]="{ 'background-color': appointment.color }" (click)="editAppointment(appointment, $event)"
                   (keydown.enter)="editAppointment(appointment, $event)"
-                  (keydown.space)="editAppointment(appointment, $event)"
-                >
+                  (keydown.space)="editAppointment(appointment, $event)">
                   <span>{{ appointment.title }}</span>
+                  <span class="resource-tag">{{ getResourceName(appointment.resourceId) }}</span>
                 </div>
               </ng-container>
             </div>
@@ -129,13 +89,7 @@
     <!-- Month @end -->
 
     <!-- Week View -->
-    <table
-      width="100%"
-      cellspacing="0"
-      cellpadding="0"
-      class="calendar-view-week"
-      *ngIf="currentView === 'week'"
-    >
+    <table width="100%" cellspacing="0" cellpadding="0" class="calendar-view-week" *ngIf="currentView === 'week'">
       <thead>
         <tr>
           <th></th>
@@ -149,85 +103,66 @@
           <td [width]="10" class="calendar-slot-cell">
             <span>{{ timeSlot }}</span>
           </td>
-          <td
-            *ngFor="let day of weekDays; index as i"
-            cdkDropList
-            (cdkDropListDropped)="drop($event, monthDays[i], timeSlot)"
-            [cdkDropListData]="appointments"
-          >
-            <div
-              (click)="selectDate(monthDays[i], timeSlot)"
-              (keydown.enter)="selectDate(monthDays[i], timeSlot)"
-              (keydown.space)="selectDate(monthDays[i], timeSlot)"
-              class="cell-overlay"
-              tabindex="0"
-            ></div>
-            <div
-              tabindex="0"
-              *ngFor="
+          <td *ngFor="let day of weekDays; index as i" cdkDropList
+            (cdkDropListDropped)="drop($event, monthDays[i], timeSlot)" [cdkDropListData]="appointments"
+            [class.slot-selected]="isSlotSelected(monthDays[i], timeSlot)">
+            <div (mousedown)="onSlotMouseDown(monthDays[i], timeSlot, undefined, $event)"
+              (mouseenter)="onSlotMouseEnter(monthDays[i], timeSlot)" (mouseup)="onSlotMouseUp(monthDays[i], timeSlot)"
+              class="cell-overlay" tabindex="0"></div>
+            <ng-container *ngFor="
                 let appointment of getAppointmentsForDateTime(
                   monthDays[i],
                   timeSlot
                 )
-              "
-              class="appointment"
-              cdkDrag
-              cdkDragHandle
-              [cdkDragData]="appointment"
-              [ngStyle]="{ 'background-color': appointment.color }"
-              (click)="editAppointment(appointment, $event)"
-              (keydown.enter)="editAppointment(appointment, $event)"
-              (keydown.space)="editAppointment(appointment, $event)"
-            >
-              <span>{{ appointment.title }}</span>
-            </div>
+              ">
+              <div tabindex="0" *ngIf="isResourceVisible(appointment.resourceId || '')" class="appointment" cdkDrag
+                cdkDragHandle [cdkDragData]="appointment" [ngStyle]="{ 'background-color': appointment.color }"
+                (click)="editAppointment(appointment, $event)" (keydown.enter)="editAppointment(appointment, $event)"
+                (keydown.space)="editAppointment(appointment, $event)">
+                <span>{{ appointment.title }}</span>
+                <span class="resource-tag">{{ getResourceName(appointment.resourceId) }}</span>
+              </div>
+            </ng-container>
           </td>
         </tr>
       </tbody>
     </table>
 
     <!-- Day View -->
-    <table
-      width="100%"
-      cellspacing="0"
-      cellpadding="0"
-      class="calendar-view-day"
-      *ngIf="currentView === 'day'"
-    >
+    <table width="100%" cellspacing="0" cellpadding="0" class="calendar-view-day" *ngIf="currentView === 'day'">
+      <thead>
+        <tr>
+          <th></th>
+          <th *ngFor="let resource of getVisibleResources()" [style.background-color]="resource.color">
+            <div class="resource-header">
+              <span class="resource-name">{{ resource.name }}</span>
+              <span class="resource-capacity" *ngIf="resource.capacity">Kapazität: {{ resource.capacity }}</span>
+            </div>
+          </th>
+        </tr>
+      </thead>
       <tbody cdkDropListGroup>
         <tr *ngFor="let slot of timeSlots">
           <td [width]="10" class="calendar-slot-cell">
             <span>{{ slot }}</span>
           </td>
-          <td
-            cdkDropList
-            (cdkDropListDropped)="drop($event, monthDays[0], slot)"
-            [cdkDropListData]="appointments"
-          >
-            <div
-              (click)="selectDate(monthDays[0], slot)"
-              (keydown.enter)="selectDate(monthDays[0], slot)"
-              (keydown.space)="selectDate(monthDays[0], slot)"
-              class="cell-overlay"
-              tabindex="0"
-            ></div>
-            <div
-              tabindex="0"
-              *ngFor="
+          <td *ngFor="let resource of getVisibleResources()" cdkDropList
+            (cdkDropListDropped)="drop($event, monthDays[0], slot, resource)" [cdkDropListData]="appointments"
+            [style.background-color]="resource.color"
+            [class.slot-selected]="isSlotSelected(monthDays[0], slot, resource)">
+            <div (mousedown)="onSlotMouseDown(monthDays[0], slot, resource, $event)"
+              (mouseenter)="onSlotMouseEnter(monthDays[0], slot, resource)"
+              (mouseup)="onSlotMouseUp(monthDays[0], slot, resource)" class="cell-overlay" tabindex="0"></div>
+            <div tabindex="0" *ngFor="
                 let appointment of getAppointmentsForDateTime(
                   monthDays[0],
-                  slot
+                  slot,
+                  resource.id
                 )
-              "
-              class="appointment"
-              cdkDrag
-              cdkDragHandle
-              [cdkDragData]="appointment"
-              [ngStyle]="{ 'background-color': appointment.color }"
-              (click)="editAppointment(appointment, $event)"
+              " class="appointment" cdkDrag cdkDragHandle [cdkDragData]="appointment"
+              [ngStyle]="{ 'background-color': appointment.color }" (click)="editAppointment(appointment, $event)"
               (keydown.enter)="editAppointment(appointment, $event)"
-              (keydown.space)="editAppointment(appointment, $event)"
-            >
+              (keydown.space)="editAppointment(appointment, $event)">
               <span>{{ appointment.title }}</span>
             </div>
           </td>
